<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kilax.rapinnus.rapinnusandroid.LoginActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/usuario"
        android:shadowColor="@color/background"
        android:textColor="@color/texto"
        android:textSize="@dimen/text_size2"/>

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/editTextUsuario"
        android:layout_marginTop="48dp"
        android:text="@string/senha"
        android:shadowColor="@color/background"
        android:textColor="@color/texto"
        android:textSize="@dimen/text_size2"/>

    <EditText
        android:id="@+id/editTextSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUsuario"
        android:layout_alignStart="@+id/editTextUsuario"
        android:layout_below="@+id/textView6"
        android:ems="10"
        android:inputType="textPassword" />

    <Switch
        android:id="@+id/switchSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/lembrarSenha" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchSenha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="Logar" />

</RelativeLayout>
